feature: done with the product details page development

--- a/snippets/cart.liquid
+++ b/snippets/cart.liquid
@@ -175,7 +175,7 @@
     },
     methods: {
       async fetchCartData() {
-        console.log('fetchCartData()');
+        // console.log('fetchCartData()');
         var cartEndpoint = '/cart.json';
 
         const response = await fetch(cartEndpoint);
