--- a/assets/theme.css
+++ b/assets/theme.css
@@ -11128,6 +11128,11 @@ ul, ol {
 .db-page--product-page .db-section--product-details {
   padding: 195px 30px 50px;
 }
+@media only screen and (max-width: 1080px) {
+  .db-page--product-page .db-section--product-details {
+    padding: 110px 30px 25px;
+  }
+}
 .db-page--product-page .db-section--product-details .db-container .breadcrumbs {
   display: flex;
   justify-content: flex-start;
@@ -11442,6 +11447,12 @@ ul, ol {
   color: #D86FFF;
   border-color: #D86FFF;
 }
+.db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-option.--size .db-inner-row .option-list .option-item.--out-of-stock {
+  color: #202329;
+  background-color: #5D6068;
+  border-color: transparent;
+  cursor: no-drop;
+}
 .db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-option.--size .product-size-guide-wrap {
   width: 100%;
   height: 0px;
@@ -11563,7 +11574,7 @@ ul, ol {
     margin: 20px auto 40px;
   }
 }
-.db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-buttons .db-btn--add-to-cart, .db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-buttons .db-btn--buy-it-now {
+.db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-buttons .db-btn--add-to-cart, .db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-buttons .db-btn--buy-it-now, .db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-buttons .db-btn--out-of-stock {
   width: 100%;
   padding: 15px 20px;
   border-width: 1px;
@@ -11571,21 +11582,21 @@ ul, ol {
   border-radius: 50px;
 }
 @media only screen and (max-width: 1080px) {
-  .db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-buttons .db-btn--add-to-cart, .db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-buttons .db-btn--buy-it-now {
+  .db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-buttons .db-btn--add-to-cart, .db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-buttons .db-btn--buy-it-now, .db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-buttons .db-btn--out-of-stock {
     padding: 12px 16px;
   }
 }
-.db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-buttons .db-btn--add-to-cart .label, .db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-buttons .db-btn--buy-it-now .label {
+.db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-buttons .db-btn--add-to-cart .label, .db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-buttons .db-btn--buy-it-now .label, .db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-buttons .db-btn--out-of-stock .label {
   color: var(--white-color);
   font-family: var(--primary-font-family);
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
-  line-height: 1em;
+  line-height: 1.25em;
   display: block;
 }
 @media only screen and (max-width: 1080px) {
-  .db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-buttons .db-btn--add-to-cart .label, .db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-buttons .db-btn--buy-it-now .label {
+  .db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-buttons .db-btn--add-to-cart .label, .db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-buttons .db-btn--buy-it-now .label, .db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-buttons .db-btn--out-of-stock .label {
     font-size: 14px;
   }
 }
@@ -11602,6 +11613,12 @@ ul, ol {
 }
 .db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-buttons .db-btn--buy-it-now:hover {
   background-color: transparent;
+}
+.db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-buttons .db-btn--out-of-stock {
+  border-color: rgba(255, 255, 255, 0.4);
+  border-radius: 0px;
+  pointer-events: none;
+  cursor: default;
 }
 .db-page--product-page .db-section--product-details .db-container .db-row .db-col:nth-of-type(2) .product-details {
   display: block;
@@ -11642,6 +11659,11 @@ ul, ol {
 .db-page--product-page .db-section--product-recommendation {
   padding: 80px 30px 50px;
 }
+@media only screen and (max-width: 1080px) {
+  .db-page--product-page .db-section--product-recommendation {
+    padding: 25px 30px;
+  }
+}
 .db-page--product-page .db-section--product-recommendation .db-container h2 {
   color: var(--white-color);
   font-family: var(--primary-font-family);
@@ -11660,7 +11682,6 @@ ul, ol {
   align-items: stretch;
   grid-gap: 50px 40px;
   gap: 50px 40px;
-  margin-bottom: 90px;
 }
 @media only screen and (max-width: 1440px) {
   .db-page--product-page .db-section--product-recommendation .db-container .product-list {
@@ -11674,7 +11695,6 @@ ul, ol {
     grid-template-columns: repeat(2, minmax(200px, 1fr));
     grid-gap: 50px 30px;
     gap: 50px 30px;
-    margin-bottom: 80px;
   }
 }
 @media only screen and (max-width: 480px) {
@@ -11682,7 +11702,6 @@ ul, ol {
     grid-template-columns: repeat(2, minmax(144px, 1fr));
     grid-gap: 20px 15px;
     gap: 20px 15px;
-    margin-bottom: 40px;
   }
 }
 .db-page--product-page .db-section--product-recommendation .db-container .product-list .product-item {
@@ -11920,6 +11939,11 @@ ul, ol {
 }
 .db-page--product-page .db-section--prev-next-product {
   padding: 80px 30px 260px;
+}
+@media only screen and (max-width: 1080px) {
+  .db-page--product-page .db-section--prev-next-product {
+    padding: 25px 30px 70px;
+  }
 }
 .db-page--product-page .db-section--prev-next-product .db-container .db-row {
   justify-content: space-between;
