--- a/styles/db-theme/pages/_page--product.scss
+++ b/styles/db-theme/pages/_page--product.scss
@@ -3,10 +3,6 @@
   .db-section--product-details {
     padding: 195px 30px 50px;
 
-    @media only screen and (max-width: 1080px) {
-      padding: 110px 30px 25px;
-    }
-
     .db-container {
       .breadcrumbs {
         display: flex;
@@ -53,6 +49,7 @@
 
         @media only screen and (max-width: 1080px) {
           gap: 12px 40px;
+          margin: 0 auto 30px;
         }
 
         @media only screen and (max-width: 768px) {
