chat modal styling

--- a/sections/page-home.liquid
+++ b/sections/page-home.liquid
@@ -364,10 +364,14 @@
       </div>
     </div>
 
-    {% comment %} <div class="db-chat-modal">
-      
-      <zapier-interfaces-page-embed page-id='clpbajc5z004klc0o3em0khbg' no-background="false" style='max-width: 900px; height: 500px;'></zapier-interfaces-page-embed>
-    </div>  {% endcomment %}
+    <div class="db-chat-modal">
+
+      <div class="db-chat-modal--bg-overlay"></div>
+
+      <div class="db-chat-modal-wrapper">
+        <zapier-interfaces-page-embed page-id='clpbajc5z004klc0o3em0khbg' no-background="false" style='max-width: 900px; height: 500px;'></zapier-interfaces-page-embed>
+      </div>
+    </div>
       
   </section>
 
