--- a/assets/theme.css
+++ b/assets/theme.css
@@ -3057,6 +3057,35 @@ ul, ol {
   fill: var(--secondaryColor);
   fill-opacity: 1;
 }
+.db-page--home .db-section--banner .db-chat-modal {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.db-page--home .db-section--banner .db-chat-modal .db-chat-modal--bg-overlay {
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(12, 7, 15, 0.4);
+}
+.db-page--home .db-section--banner .db-chat-modal .db-chat-modal-wrapper {
+  position: relative;
+  max-width: 900px;
+  width: 100%;
+  min-width: 900px;
+  height: 500px;
+}
 .db-page--home .db-section--banner::after {
   content: "";
   position: absolute;
