--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -1,4 +1,4 @@
-<footer class="db-footer site-footer">
+{% comment %} <footer class="db-footer site-footer">
   <section class="db-section db-section--newsletter">
     <div class="db-container">
       <div class="db-row">
@@ -159,7 +159,7 @@
       </p>
     </div>
   </section>
-</footer>
+</footer> {% endcomment %}
 <!-- MailChimp Embedd Form -->
 <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
 <script type="text/javascript">
