--- a/styles/db-theme/_page--home.scss
+++ b/styles/db-theme/_page--home.scss
@@ -1451,6 +1451,39 @@
       }
     }
 
+    .db-chat-modal {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      z-index: 999;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      
+      .db-chat-modal--bg-overlay {
+        position: absolute;
+        display: block;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(12, 7, 15, 0.40);
+      }
+
+      .db-chat-modal-wrapper {
+        position: relative;
+        max-width: 900px;
+        width: 100%;
+        min-width: 900px;
+        height: 500px;
+      }
+
+    }
+
     &::after {
       content: '';
       position: absolute;
